// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Col 1`] = `Array []`;

exports[`Mock render - default - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="default_input"
            title="default"
          >
            default
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "default",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.align: left - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.align: left - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.align: left_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.align: left",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.align: right - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.align: right - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.align: right_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.align: right",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.colon: false - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.colon: false - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="ant-form-item-no-colon css-t32tv0"
            htmlFor="properties.colon: false_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.colon: false",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.colon: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.colon: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.colon: true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.colon: true",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.disabled: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        false,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.disabled: true",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.extra: Extra long_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra css-8kn4zf"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.extra: Extra long",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline = true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline = true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-jz43lg"
          flex="0 1 auto"
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.extra: Extra long with inline = true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra css-8kn4zf"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-1lhwz6e",
      "id": "properties.extra: Extra long with inline = true",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-jz43lg"
          flex="0 1 auto"
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.extra: Extra long with inline true_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-1lhwz6e",
      "id": "properties.extra: Extra long with inline true",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra text - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra text - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.extra: Extra text_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra css-8kn4zf"
          >
            Extra text
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.extra: Extra text",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extraStyle: border 1px purple - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extraStyle: border 1px purple - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.extraStyle: border 1px purple_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra css-zgv5pj"
          >
            Extra text
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.extraStyle: border 1px purple",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.feedbackStyle: border 1px blue - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.feedbackStyle: border 1px blue - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.feedbackStyle: border 1px blue_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra css-8kn4zf"
          >
            The extra content
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.feedbackStyle: border 1px blue",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inline: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.inline: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-jz43lg"
          flex="0 1 auto"
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.inline: true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-1lhwz6e",
      "id": "properties.inline: true",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.span: 2 - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.span: 2 - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          md={
            Object {
              "span": 2,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.span: 2_input"
            title="This is the long label title wrapped by short span"
          >
            This is the long label title wrapped by short span
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 22,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.span: 2",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.span: 2 with long work title - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.span: 2 with long work title - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          md={
            Object {
              "span": 2,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.span: 2 with long work title_input"
            title="Thisisthelonglabeltitlea"
          >
            Thisisthelonglabeltitlea
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 22,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.span: 2 with long work title",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.title_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.title",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title long - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.title long - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left css-vqci06"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="css-t32tv0"
            htmlFor="properties.title long_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item css-0",
      "id": "properties.title long",
      "style": Object {
        "marginBottom": 0,
      },
    },
    Object {},
  ],
]
`;
